--- a/index.html
+++ b/index.html
@@ -1,86 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&display=swap"
-  rel="stylesheet" />
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <h1>Weather App</h1>
-    <div class="tab-container">
-      <p class="tab" data-userWeather>Your Weather</p>
-      <p class="tab" data-searchWeather>Search Weather</p>
-    </div>
-    <div class="weather-container">
-      <!--Grant location container-->
-      <div class="sub-container grant-location-container">
-       <img src="./images/location.png" width="80" loading="lazy">
-       <p>Grant Location Access</p>
-       <p>Allow Access to get weather Information</p>
-       <button class="btn" data-grantAccess>Grant Access</button>
-      </div>
+    
+    <div class="wrapper">
 
-      <!-- search form from-container-->
-      <form action="form-container" data-searchForm>
-        <input placeholder="Search for the cities..." data-searchInput>
-        <button class="btn" type="submit">
-          <img src="./images/search.png" width="20" loading="lazy">
-        </button>
-      </form>
-      <!--loading screen container-->
-      <div class="sub-container loading-container">
-        <img src="./images/loading.gif" width="150" height="150">
-        <p>Fetching Location</p>
-      </div>
+        <h1>Weather App</h1>
 
-      <!--show weather info-->
-      <div class="sub-container user-info-container">
-        <!--city and flag-->
-        <div class="name">
-          <p data-cityName></p>
-          <img data-contryIcon>
+        <div class="tab-container">
+            <p id="effective" class="tab" data-userWeather>Your Weather</p>
+            <p class="tab" data-searchWeather>Search Weather</p>
         </div>
-        <!-- weather description-->
-        <p data-weatherDesc></p>
-        <img data-weathericon>
-        <!--temperature-->
-        <p data-temp></p>
 
-        <div class="parameter-container">
+        <div class="weather-container">
 
-          <!--card 1-->
-          <div class="parameter">
-              <img src="./images/wind.png" >
-              <p>windspeed</p>
-              <p data-windspeed></p>
-          </div>
+            <!-- grant location container-->
+            <div class="sub-container grant-location-container">
+                <img src="./images/location.png" width="80" height="80" loading="lazy">
+                <p>Grant Location Access</p>
+                <p>Allow Access to get weather Information</p>
+                <button class="btn" data-grantAccess>Grant Access</button>
+            </div>
 
-          <!--card 2-->
-          <div class="parameter">
-              <img src="./images/humidity.png" >
-              <p>humidity</p>
-              <p data-humidity></p>
-          </div>
+            <!-- search form -> form-container-->
+            <form class="form-container" data-searchForm>
+                <input placeholder="Search for City..." data-searchInput>
+                <button class="btn" type="submit">
+                    <img src="./images/search.png"  width="20" height="20" loading="lazy">
+                </button>
+            </form>
 
-          <!--card 3-->
-          <div class="parameter">
-              <img src="./images/cloud.png" >
-              <p>Clouds</p>
-              <p data-cloudiness></p>
-          </div>
+            <!--- loading screen container -->
+            <div class="sub-container loading-container">
+                <img src="./images/loading.gif" width="150" height="150">
+                <p>Loading</p>
+            </div>
 
-      </div>
+            <!-- show weather info -->
+            <div class="sub-container user-info-container">
 
-      </div>
+                <!--city name and Flag-->
+                <div class="name">
+                    <p data-cityName></p>
+                    <img data-countryIcon>
+                </div>
+
+                <!-- weather descriptuion-->
+                <p data-weatherDesc></p>
+                <!--weather Icon-->
+                <img data-weatherIcon>
+                <!--temperature-->
+                <p data-temp></p>
+
+                <!--3 cards - parameters-->
+                <div class="parameter-container">
+
+                    <!--card 1-->
+                    <div class="parameter">
+                        <img src="./images/wind.png" >
+                        <p>windspeed</p>
+                        <p data-windspeed></p>
+                    </div>
+
+                    <!--card 2-->
+                    <div class="parameter">
+                        <img src="./images/humidity.png" >
+                        <p>humidity</p>
+                        <p data-humidity></p>
+                    </div>
+
+                    <!--card 3-->
+                    <div class="parameter">
+                        <img src="./images/cloud.png" >
+                        <p>Clouds</p>
+                        <p data-cloudiness></p>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+        </div>
+
+
     </div>
-  </div>
 
-  <script src="index.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
