Added responsiveness and error handling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="shortcut icon" href="./images/weather-icon-png-2.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&display=swap"
@@ -94,6 +95,11 @@
 
 
         </div>
+        <div class="error-container">
+            <img src="./images/computer.png" alt="Error" class="error-image">
+            <p class="error-message">City not found</p>
+          </div>
+          
 
 
     </div>
